replaced custom clamping logic with Math.clamp and improved exception logging formatting